Nested collection titles no longer wrap at 300px;

--- a/arms/src/applications/portal/core/assets/css/ui.dynatree.css
+++ b/arms/src/applications/portal/core/assets/css/ui.dynatree.css
@@ -84,6 +84,7 @@ ul.dynatree-container
 	/*border: 1px dotted gray;*/
 	overflow: auto;
 	height: 100%; /* issue 263 */
+	width: 90%;
 }
 
 ul.dynatree-container ul
